# zag

./: .gitignore  README.md  build.zig  example.json  main.zig  zag.json  zag.zig
cli/: Cargo.toml
cli/src/: main.rs  parse.rs
cli/src/command/: add.rs  init.rs
example/: build.zig  zag.json
example/src/: main.zig
src/: json.zig  main.zig  parse.zig  zag.zig
